--- a/style.css
+++ b/style.css
@@ -12,8 +12,22 @@ body {
 main {
     height: 100vh;
     width: 80%;
-    background-color: white;
     margin: auto;
     display: flex;
     flex-direction: column;
+    gap: 1rem;
+}
+
+.center {
+    width: 80%;
+    margin: 1rem auto;
+}
+
+.center > img {
+    width: 100%;
+}
+
+main > * {
+    background-color: white;
+    padding: 1rem;
 }
